# datamodel-deploy-template

./: LICENSE  README.md  pyproject.toml
.github/: README.md
.github/workflows/: deploy-push.yaml  generate-matrix.yaml
.workflow/: deploy-push.yaml  generate-matrix.yaml
build_scripts/: changed_models.py  deploy_model.py  deploy_space.py  replace_vars.py
datamodels/MovieDM/: datamodel.graphql  datamodel_config.yaml
datamodels/MovieDM/transformations/transformation1/: manifest.yaml  transformation.sql
models/: config.yaml
models/information/: assets.yaml  containers.yaml  information_views.yaml
models/solution/: pump.yaml
